--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,10 @@
-FROM ubuntu:latest
-LABEL authors="Zhuchka"
+FROM python:3.13.3-slim
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+CMD ["python", "main.py"]
