--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,5 +6,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-CMD ["cd", "src"]
+
+WORKDIR /app/src
+
 CMD ["python", "main.py"]
