--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -7,7 +7,9 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
     depends_on:
       - zookeeper
@@ -16,13 +18,17 @@ services:
     image: confluentinc/cp-zookeeper:7.4.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
 
   api_service:
     build:
-      context: ./api_service
+      context: ./api
     ports: [ "8000:8000" ]
     environment:
       KAFKA_BROKERS: "kafka:9092"
+      UVICORN_HOST: "127.0.0.1"
+      UVICORN_PORT: "8000"
+      MONGO_URL: "mongodb://root:example@mongodb:27017"
     depends_on:
       - kafka
 
@@ -43,6 +49,16 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - mongodb_data:/data/db
+
+  mongo-express:
+    image: mongo-express:latest
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongodb:27017/
+    depends_on:
+      - mongodb
+
 
 volumes:
   mongodb_data:
