--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,10 +3,12 @@ FROM python:3.13.3-slim
 WORKDIR /app
 
 COPY requirements.txt .
+RUN pip install fastapi[standard]
+RUN pip install faststream[kafka]
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
 WORKDIR /app/src
 
-CMD ["python", "main.py"]
+CMD ["fastapi", "run", "main.py", "--port", "8000"]
